# predictvet.ai

./: Dockerfile  README.md  pyproject.toml  requirements.txt
predictvet/: .env  agent.py
