[tool.poetry]
name = "predictvet"
version = "0.1.0"
description = "PredictVet Agent - AI assistant for veterinarians"
authors = ["Brandon Hancock <brandon@brandonhancock.io>"]
readme = "README.md"
packages = [{include = "predictvet"}]

[tool.poetry.dependencies]
python = "^3.12"
google-adk = "^0.5.0"
requests = "^2.31.0"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = "^1.92.0"
google-cloud-storage = "^2.19.0"
google-generativeai = "^0.7.2"
gitpython = "^3.1.40"
yfinance = "^0.2.56"
psutil = "^5.9.5"
absl-py = "^2.1.0"
cloudpickle = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

